--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,46 @@
-<ul>
-	<% @data.each_with_index do |result, index| %>
-		<% break if index == 10 %>
-		<li><img src="<%= result['profile_image_url']%>"></li>
-		<li><%= result['from_user'] %></li>
-		<li><%= result['text'] %></li>
-		<li><%= Time.parse(result['created_at']).strftime("%b %e %Y at %I:%M%p") %></li>
-	<% end %>
-</ul>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		
+		<title>&hearts; | lovinindy</title>
+
+		<!-- Meta tags -->
+		<meta name="description" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<!-- CSS -->
+		<link rel="stylesheet" href="stylesheets/main.css?version=1" />
+
+		<!-- JavaScript -->
+		<!--[if IE]><![endif]-->
+		<!--[if lt IE 9]>
+		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+		<script src="javascripts/respond.min.js"></script>
+	</head>
+	<body>
+		<header>
+			<h1><img src="images/logo.png" alt="lovinindy logo" title="lovinindy"></h1>
+			
+			<div class="intro">
+				<h2>Showing love for our city, one tweet at a time.</h2>
+				<p>Tweet with <code>@lovinindy</code> or <code>#lovinindy</code> or post a Flickr photo with the tag <code>lovinindy</code> and it will be included below!</p>
+			</div>
+			
+		</header>
+		<ul>
+			<% @data.each_with_index do |result, index| %>
+				<% break if index == 10 %>
+				<li><img src="<%= result['profile_image_url']%>"></li>
+				<li><%= result['from_user'] %></li>
+				<li><%= result['text'] %></li>
+				<li><%= Time.parse(result['created_at']).strftime("%b %e %Y at %I:%M%p") %></li>
+			<% end %>
+		</ul>
+		<footer>
+			made with love by Supermatter
+		</footer>
+	</body>
+</html>
