--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -56,8 +56,8 @@ body {
 
 /* Fonts settings based on the 100E2R standard: http://www.informationarchitects.jp/en/100e2r/ */
 body, button, input, select, textarea {
-	font: 1em/1.625 Georgia, serif;
-	color: #222; /* Full black on white is too much contrast, #222 is a better default */
+	font: 1em/1.625 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	color: #4c4d4f; /* Full black on white is too much contrast, #222 is a better default */
 }
 
 /* Add and/or remove tags as your baseline grid needs */
@@ -75,7 +75,7 @@ p, blockquote, q, pre, address, hr, code, samp, dl, ol, ul, form, table, fieldse
 */
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: Palatino, 'Palatino Linotype', 'Book Antiqua', FreeSerif, Georgia, serif;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 1em;
 	font-weight: bold;
 }
@@ -379,12 +379,22 @@ body{
 
 header{
 	border-bottom: 1px solid #c5c5c5;
+	margin-top: -115px;
 }
 
 h1{
 	display: block;
-	margin: -115px auto 0;
+	margin:  0 auto;
 	width: 220px;
+	font-size: 1em;
+}
+
+.intro{
+	text-align: center;
+}
+
+.intro h2{
+	font-size: 1.75em;
 }
 
 
@@ -405,8 +415,20 @@ h1{
 @media only screen and (min-width: 1024px) { 
 	/* Desktops (1024px+) styles go here */
 	
+	header{
+		margin-top: 0;
+	}
+		
 	
+	h1{
+		float: left;
+		padding-right: 2em;
+	}
 	
+	.intro{
+		padding: 2em;
+		text-align: left;
+	}
 }
 
 /* Print styles
