quick view and style update

--- a/views/index.erb
+++ b/views/index.erb
@@ -29,17 +29,19 @@
 			</div>
 			
 		</header>
-		<ul>
-			<% @data.each_with_index do |result, index| %>
-				<% break if index == 10 %>
-				<li><img src="<%= result['profile_image_url']%>"></li>
-				<li><%= result['from_user'] %></li>
-				<li><%= result['text'] %></li>
-				<li><%= Time.parse(result['created_at']).strftime("%b %e %Y at %I:%M%p") %></li>
-			<% end %>
-		</ul>
+
+		<% @data.each do |result| %>
+			<div class="tweet">
+				<img src="<%= result['profile_image_url']%>">
+				<div class="body">
+					<%= result['text'] %>
+					<%= result['from_user'] %> | <%= Time.parse(result['created_at']).strftime("%b %e %Y at %I:%M%p") %>
+				</div>
+			</div>
+		<% end %>
+		
 		<footer>
-			made with love by Supermatter
+			made with love by <a href="http://supermatter.com/">Supermatter</a>
 		</footer>
 	</body>
 </html>
