--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -397,7 +397,31 @@ h1{
 	font-size: 1.75em;
 }
 
+.tweet{
+	overflow: auto;
+	margin: 2em 0;
+}
 
+.tweet img{
+	float: left;
+}
+
+.tweet .body{
+	background: #dedede;
+	padding: 1em;
+	margin-left: 4em;
+}
+
+footer{
+	text-align: center;
+	color: #888;
+	font-size: .9em;
+	font-style: italic;
+}
+
+footer a{
+	color: #333;
+}
 
 /* Media queries
 ---------------------------------------- */
