--- a/views/index.erb
+++ b/views/index.erb
@@ -36,6 +36,12 @@
 				<li><%= result['from_user'] %></li>
 				<li><%= result['text'] %></li>
 				<li><%= Time.parse(result['created_at']).strftime("%b %e %Y at %I:%M%p") %></li>
+				<% unless result.embed_media_type.nil? %>
+					<li><%= result.embed_media_type%></li>
+					<li><img src="<%= result.embed_media_thumb%>"></li>
+	      	<li><%= result.embed_media_html%></li>
+	      	<li><%= result.embed_media_display%></li>
+				<%end%>
 			<% end %>
 		</ul>
 		<footer>
