Changed fetching of data sintax

--- a/views/index.erb
+++ b/views/index.erb
@@ -31,7 +31,7 @@
 		</header>
 		<% @data.each do |result| %>
 			<div class="tweet">
-				<img src="<%= result['profile_image_url']%>">
+				<img src="<%= result.profile_image_url%>">
 				<div class="body">
 					<%= result.text %>
 					<%= result.from_user %> | <%= Time.parse(result.created_at).strftime("%b %e %Y at %I:%M%p") %>
