--- a/views/index.erb
+++ b/views/index.erb
@@ -30,14 +30,18 @@
 			
 		</header>
 		<% @data.each do |result| %>
-			<div class="tweet">
-				<img src="<%= result.profile_image_url%>">
+			<div class="<%=result.embed_media_type || 'tweet' %> item">
+				<img src="<%= result.profile_image_url%>" class="profile_img">
+				<% if !result.embed_media_thumb.nil? &&  result.embed_media_type != 'link' %>
+					<div class="media">
+						<img src="<%= result.embed_media_thumb%>">
+					</div>
+				<% end %>
 				<div class="body">
 					<%= result.text %>
-					<%= result.from_user %> | <%= Time.parse(result.created_at).strftime("%b %e %Y at %I:%M%p") %>
+					<div class="user"><%= result.from_user %> | <%= Time.parse(result.created_at).strftime("%b %e %Y at %I:%M%p") %></div>
 				</div>
 				<!--Data added from Embedly to result>
-				<%#= result.embed_media_type%>
 				<!--img src="<#%= result.embed_media_thumb%>"-->
       	<%#= result.embed_media_html%>
       	<%#= result.embed_media_display%>
