--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -414,6 +414,7 @@ h1{
 	padding: 1em;
 	margin-left: 4em;
 	color: #fff;
+	text-shadow: 1px 1px 2px rgba(0,0,0,.6);
 }
 
 .item .media img{
@@ -438,13 +439,16 @@ h1{
 
 footer{
 	text-align: center;
-	color: #888;
+	color: #bbb;
 	font-size: .9em;
 	font-style: italic;
+	border-top: 1px solid #c5c5c5;
+	padding-top: 30px;
+	margin-top: 30px;
 }
 
-footer a{
-	color: #333;
+footer a, footer a:active, footer a:visited{
+	color: #888;
 }
 
 /* Media queries
@@ -485,6 +489,7 @@ footer a{
 	
 	footer{
 		clear: both;
+		text-align: right;
 	}
 }
 
