--- a/views/home.erb
+++ b/views/home.erb
@@ -29,23 +29,8 @@
 			</div>
 			
 		</header>
-		<% @data.each do |result| %>
-			<div class="<%=result.embed_media_type || 'tweet' %> item">
-				<img src="<%= result.profile_image_url%>" class="profile_img">
-				<% if !result.embed_media_thumb.nil? &&  result.embed_media_type != 'link' %>
-					<div class="media">
-						<img src="<%= result.embed_media_thumb%>">
-					</div>
-				<% end %>
-				<div class="body">
-					<%= result.text %>
-					<div class="user"><%= result.from_user %> | <%= Time.parse(result.created_at).strftime("%b %e %Y at %I:%M%p") %></div>
-				</div>
-				<!--Data added from Embedly to result>
-				<!--img src="<#%= result.embed_media_thumb%>"-->
-      	<%#= result.embed_media_html%>
-      	<%#= result.embed_media_display%>
-			</div>
+		<% @tweets.each do |tweet| %>
+			<%= tweet['embed'].inspect %>
 		<% end %>
 		
 		<footer>
